fix: stop navbar overflow in middle displays

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -947,7 +947,7 @@ body {
 
 @media (min-width: 992px) and (max-width: 1199px){
   .navbar-right a {
-    font-size: 10px;
+    font-size: 9px;
   }
 }
 
